# Sonic-2-Mania-Development

./: .gitignore  .gitmodules  CMakeLists.txt  CustomAniTiles.ini  README.md  Required.lst  Settings.ini  log.txt  mod.ini
Data/Palettes/: SpecialStage.act
Data/Shaders/CSO-DX11/: CRT-Yee64.fso  CRT-Yee64.vso  CRT-Yeetron.fso  CRT-Yeetron.vso  Clean.fso  Clean.vso  None.fso  None.vso  RGB-Image.fso  RGB-Image.vso  YUV-420.fso  YUV-420.vso  YUV-422.fso  YUV-422.vso  YUV-444.fso  YUV-444.vso
Data/Shaders/CSO-DX9/: CRT-Yee64.fso  CRT-Yeetron.fso  Clean.fso  None.fso  RGB-Image.fso  YUV-420.fso  YUV-422.fso  YUV-444.fso
Data/Stages/CNZ/: desktop.ini
Data/Stages/EHZ/: Maniac.json
Data/Stages/HEHZ/: Maniac.json
Data/Stages/Logos/: Maniac.json
Data/Stages/Menu/: Maniac.json
Data/Stages/MenuOld/: Maniac.json
Data/Strings/: Credits.txt  StringsEN.txt
S2M/: S2M.sln
S2M/S2M/: S2M.cpp  S2M.hpp  S2M.vcxproj  S2M.vcxproj.filters
S2M/S2M/Objects/Global/: Announcer.hpp  BoundsMarker.cpp  BoundsMarker.hpp  COverlay.cpp  DebugMode.hpp  EggPrison.cpp  GameOver.cpp  HUD.cpp  ImageTrail.hpp  InvisibleBlock.cpp  ItemBox.cpp  Localization.cpp  PauseMenu.hpp  PlaneSwitch.cpp  Player.cpp  Player.hpp  SignPost.hpp  Spring.cpp  StarPost.cpp  StarPost.hpp  SuperSparkle.cpp  TitleCard.cpp  Zone.cpp  Zone.hpp
S2M/S2M/Objects/Helpers/: CutsceneSeq.hpp  DialogRunner.hpp  DrawHelpers.cpp  DrawHelpers.hpp  FXAniTiles.cpp  FXAudioPan.cpp  FXAudioPan.hpp  FXFade.cpp  FXTileModifier.hpp  GameProgress.cpp  LogHelpers.hpp  MenuParam.hpp  PlayerProbe.hpp  Soundboard.cpp  TimeAttackData.cpp
S2M/S2M/Objects/Test/: TestObject.cpp
src/: GameAPI
src/GameAPI/CPP/GameAPI/: GameVariables.hpp
src/S2M/: S2M.cpp  S2M.hpp  S2M.vcxproj  S2M.vcxproj.filters
src/S2M/Objects/ARZ/: ARZSetup.cpp  ARZSetup.hpp  ArrowLauncher.cpp  ArrowLauncher.hpp  BreakoffPillar.cpp  BreakoffPillar.hpp  ChopChop.cpp  ChopChop.hpp  Grounder.cpp  Grounder.hpp  Wisp.cpp  Wisp.hpp
src/S2M/Objects/Bonus/: BonusTitleCard.cpp  BonusTitleCard.hpp
src/S2M/Objects/CNZ/: CNZSetup.cpp  CNZSetup.hpp  CNZSpotlight.cpp  CNZSpotlight.hpp  CircleBumper.cpp  CircleBumper.hpp  ConveyorBelt.cpp  ConveyorBelt.hpp  Crawl.cpp  Crawl.hpp  Flipper.cpp  Flipper.hpp  Plunger.cpp  Plunger.hpp  SlotDisplay.cpp  SlotDisplay.hpp  SlotMachine.cpp  SlotMachine.hpp  SlotPrize.cpp  (+9 more)
(+428 files in other folders)
